<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/main_show"
              tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_to_dip_78"
        android:background="@color/group_list_liner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_to_dip_76"
            android:layout_alignParentTop="true"
            android:background="@color/main_title_backgroud"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/main_conversation_liner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_conversation_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_conversation"
                    android:textColor="@color/black_textview"
                    android:textSize="@dimen/px_to_dip_32"/>

                <TextView
                    android:id="@+id/de_num"
                    style="@style/DemoMainNewMassage"
                    android:layout_marginRight="@dimen/px_to_dip_14"
                    android:text="9"
                    android:paddingBottom="2dp"
                    android:textColor="@color/main_regist"
                    android:visibility="visible"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_group_liner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_group_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_group"
                    android:textColor="@color/black_textview"
                    android:textSize="@dimen/px_to_dip_32"/>

                <TextView
                    style="@style/DemoMainNewMassage"
                    android:textColor="@color/main_regist"
                    android:layout_marginRight="@dimen/px_to_dip_14"
                    android:visibility="gone"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_chatroom_liner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_chatroom_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_chatroom"
                    android:textColor="@color/black_textview"
                    android:textSize="@dimen/px_to_dip_32"/>

                <TextView
                    style="@style/DemoMainNewMassage"
                    android:textColor="@color/main_regist"
                    android:layout_marginRight="@dimen/px_to_dip_7"
                    android:visibility="gone"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_customer_liner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_customer_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_customer"
                    android:textColor="@color/black_textview"
                    android:textSize="@dimen/px_to_dip_32"/>

                <TextView
                    style="@style/DemoMainNewMassage"
                    android:layout_marginRight="@dimen/px_to_dip_14"
                    android:text="20"
                    android:textColor="@color/main_regist"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/main_switch_img"
            style="@style/DemoMainPublic"/>

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:flipInterval="30"
        android:persistentDrawingCache="animation"/>

</LinearLayout>
